--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "tsc -p .",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
   },
-  "dependencies": {},
+  "dependencies": {
+    "apollo-server": "^3.8.2",
+    "graphql": "^16.5.0"
+  },
   "devDependencies": {
     "@types/node": "^17.0.41",
     "nodemon": "^2.0.16",
