--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,14 @@
 version: "3"
 
 services:
+  node:
+    build: .
+    environment:
+      NODE_ENV: development
+    ports:
+      - "4000:4000"
+    volumes:
+      - ./src/:/app/src
   mongo:
     image: mongo:4.0
     restart: always
